--- a/node.js/express.js/package.json
+++ b/node.js/express.js/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "pug": "^3.0.2"
+    "mysql2": "^2.3.3",
+    "pug": "^3.0.2",
+    "sequelize": "^6.26.0"
   }
 }
